# beep-boop

./: .gitignore  CONTENT_INTEGRATION_GUIDE.md  CROSS_REFERENCE_BENEFITS.md  DEEP_RESEARCH_AGENTS.yaml  DEPLOYMENT_ROADMAP.md  ENHANCED_FUNCTION_DESCRIPTIONS.md  GENERALIZED_RESPONSE_STYLE_FIX.md  GOOSE_AUDIT.md  GOOSE_AUDIT_RESOLUTION_SUMMARY.md  INTERVIEW_QUESTIONS.md  KNOWLEDGE_GRAPH_ARCHITECTURE.md  OLLAMA_INTEGRATION_SUMMARY.md  README.md  RESPONSE_FORMAT_CLARIFICATION.md  ROADMAP.md  SIMPLIFICATION_IMPLEMENTATION_SUMMARY.md  SIMPLIFICATION_PLAN.md  YAML_STRUCTURE_GUIDE.md  agentic_companion_dev.ipynb  app.py  conversation_memory.json  cross_reference_integrator.py  cross_reference_report.md  cypherpunk_app.py  data_loader.py  enhanced_cross_reference_integrator.py  enhanced_cross_reference_report.md  enhanced_session1_summary.yaml  env.example  env_template.txt  import_data_to_rag.py  migrate_data_structure.py  projects.yaml  pyproject.toml  requirements.txt  session1_summary.yaml  setup.sh  setup_digi_core.py  test_llm_parser.py
data/: favorites.yaml  work_experience.yaml
data/career/: technical_skills.yaml  work_experience.yaml
data/metadata/: session_meta.yaml
data/personal/: goals.yaml  interests.yaml  projects.yaml
data/preferences/: books.yaml  documentaries.yaml  movies.yaml  music.yaml  shows.yaml
data/projects/: beep-boop.yaml  lumi.yaml  (+3 more)
data_old/: README.md  beep-boop_project.yaml  features.yaml
modules/: __init__.py  chat.py  content_processor.py  cypherpunk_ui.py  digi_core_integration.py  enums.py  parser.py  rag.py  synthesizer.py  ui.py
(+34 files in other folders)
